welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: value and is not a member of Boolean
  if (aSmile==true and bSmile==true ){
                   ^monkeyTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (aSmile==true and bSmile==true ){
  ^